## Process this file with automake to produce Makefile.in

# Scan for additional macro definitions.
ACLOCAL_AMFLAGS = -I $(top_srcdir)/m4

# Add Doxygen macros.
include $(top_srcdir)/aminclude.am
#DX_CLEANFILES = doc

# Local automake options.
#AUTOMAKE_OPTIONS = foreign

SUBDIRS = src  \
          test
